--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,4 @@
-# YANGI .env FAYL YARATING VA
-# QUYIDAGI MA'LUMOTLARNI YOZING:
+# Create new ".env" file and write constants below
 
 ADMINS=12345678,12345677,12345676
 BOT_TOKEN=123452345243:Asdfasdfasf
